<resources>
    <string name="app_name">AndroidTTS</string>
    <string name="pitch">목소리 높이</string>
    <string name="rate">목소리 빠르기</string>
    <string name="default_value">1.0</string>
    <string name="speak_button">음성 듣기</string>
    <string name="store_button">저장하기</string>
    <string name="ett_hint">음성으로 바꿀 텍스트 입력</string>
    <string name="edit_title_hint">저장할 음성파일 제목 입력</string>
    <string name="for_list">리스트로 넘어감</string>

    <string name="tv_list_title">저장된 음성 리스트</string>
    <string name="play_description">음성 파일 재생</string>
    <string name="delete_description">음성 파일 삭제</string>
</resources>