<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity">

    <!-- 음성 파일 이름을 작성할 공간 -->

    <EditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:gravity="top"
        android:hint="@string/edit_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_tts"
        app:layout_constraintEnd_toStartOf="@id/btn_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_weight="8"
        app:layout_constraintVertical_weight="1"/>

    <ImageButton
        android:id="@+id/btn_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/list"
        android:contentDescription="@string/for_list"
        app:layout_constraintTop_toTopOf="@id/et_title"
        app:layout_constraintBottom_toBottomOf="@id/et_title"
        app:layout_constraintStart_toEndOf="@id/et_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"/>

    <!-- 음성으로 변환할 text 작성할 공간 -->

    <EditText
        android:id="@+id/et_tts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="top"
        android:hint="@string/ett_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@id/btn_speak"
        app:layout_constraintEnd_toEndOf="@+id/btn_list"
        app:layout_constraintStart_toStartOf="@id/et_title"
        app:layout_constraintTop_toBottomOf="@id/et_title"
        app:layout_constraintVertical_weight="4"/>


    <!-- speak, store 버튼 관리 -->

    <Button
        android:id="@+id/btn_speak"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:text="@string/speak_button"
        app:layout_constraintTop_toBottomOf="@+id/et_tts"
        app:layout_constraintBottom_toTopOf="@id/spinner_language"
        app:layout_constraintStart_toStartOf="@id/et_tts"
        app:layout_constraintEnd_toStartOf="@id/btn_store"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/btn_store"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:text="@string/store_button"
        app:layout_constraintBottom_toBottomOf="@id/btn_speak"
        app:layout_constraintTop_toTopOf="@+id/btn_speak"
        app:layout_constraintStart_toEndOf="@id/btn_speak"
        app:layout_constraintEnd_toEndOf="@id/et_tts"/>


    <!-- 언어 선택 스피너 -->

    <Spinner
        android:id="@+id/spinner_language"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:spinnerMode="dialog"
        android:entries="@array/language"
        app:layout_constraintTop_toBottomOf="@id/btn_speak"
        app:layout_constraintBottom_toTopOf="@id/tv_pitch_explain"
        app:layout_constraintStart_toStartOf="@id/btn_speak"
        app:layout_constraintEnd_toEndOf="@id/btn_store"
        app:layout_constraintVertical_weight="1" />


    <!-- pitch 관리 -->

    <TextView
        android:id="@+id/tv_pitch_explain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/pitch"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/spinner_language"
        app:layout_constraintBottom_toTopOf="@id/seekbar_pitch"
        app:layout_constraintStart_toStartOf="@id/et_tts"
        app:layout_constraintEnd_toStartOf="@id/tv_current_pitch"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        style="@style/control_text"/>



    <TextView
        android:id="@+id/tv_current_pitch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/default_value"
        app:layout_constraintTop_toTopOf="@id/tv_pitch_explain"
        app:layout_constraintBottom_toBottomOf="@id/tv_pitch_explain"
        app:layout_constraintStart_toEndOf="@id/tv_pitch_explain"
        app:layout_constraintEnd_toEndOf="@id/btn_store"
        app:layout_constraintHorizontal_weight="1"
        style="@style/control_text"/>


    <SeekBar
        android:id="@+id/seekbar_pitch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:progress="50"
        app:layout_constraintTop_toBottomOf="@id/tv_pitch_explain"
        app:layout_constraintBottom_toTopOf="@id/tv_rate_explain"
        app:layout_constraintStart_toStartOf="@id/tv_pitch_explain"
        app:layout_constraintEnd_toEndOf="@id/tv_current_pitch"
        app:layout_constraintVertical_weight="1"/>


    <!-- speed 관리 -->

    <TextView
        android:id="@+id/tv_rate_explain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/rate"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/seekbar_pitch"
        app:layout_constraintBottom_toTopOf="@id/seekbar_rate"
        app:layout_constraintStart_toStartOf="@id/seekbar_pitch"
        app:layout_constraintEnd_toStartOf="@id/tv_current_rate"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        style="@style/control_text"/>


    <TextView
        android:id="@+id/tv_current_rate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/default_value"
        app:layout_constraintTop_toTopOf="@id/tv_rate_explain"
        app:layout_constraintBottom_toBottomOf="@id/tv_rate_explain"
        app:layout_constraintStart_toEndOf="@id/tv_rate_explain"
        app:layout_constraintEnd_toEndOf="@id/seekbar_pitch"
        app:layout_constraintHorizontal_weight="1"
        style="@style/control_text"/>


    <SeekBar
        android:id="@+id/seekbar_rate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:progress="23"
        app:layout_constraintTop_toBottomOf="@id/tv_rate_explain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_rate_explain"
        app:layout_constraintEnd_toEndOf="@id/tv_current_rate"
        app:layout_constraintVertical_weight="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>